[gd_scene load_steps=5 format=1]

[ext_resource path="res://instances/play_camera.gd" type="Script" id=1]
[ext_resource path="res://textures/power_ramp.tex" type="Texture" id=2]
[ext_resource path="res://textures/power_pointer.tex" type="Texture" id=3]
[ext_resource path="res://fonts/font_theme.tres" type="Theme" id=4]

[node name="play_camera" type="Camera"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
projection = 0
fov = 65.0
near = 0.1
far = 100.0
keep_aspect = 1
current = true
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
script/script = ExtResource( 1 )

[node name="power_ramp" type="Sprite3D" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.64, -2.42425, -4.37966 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
centered = false
offset = Vector2( 0, 0 )
flip_h = false
flip_v = false
modulate = Color( 1, 1, 1, 1 )
opacity = 1.0
pixel_size = 0.01
axis = 2
flags/transparent = true
flags/shaded = false
flags/double_sided = true
flags/on_top = true
flags/alpha_cut = 0
texture = ExtResource( 2 )
vframes = 1
hframes = 1
frame = 0
region = false
region_rect = Rect2( 0, 0, 0, 0 )

[node name="power_pointer" type="Sprite3D" parent="power_ramp"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0.019644 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
centered = true
offset = Vector2( 0, 0 )
flip_h = false
flip_v = false
modulate = Color( 1, 1, 1, 1 )
opacity = 1.0
pixel_size = 0.01
axis = 2
flags/transparent = true
flags/shaded = false
flags/double_sided = true
flags/on_top = true
flags/alpha_cut = 0
texture = ExtResource( 3 )
vframes = 1
hframes = 1
frame = 0
region = false
region_rect = Rect2( 0, 0, 0, 0 )

[node name="Player" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 4 )
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
text = "Player 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="set" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 4 )
margin/left = 433.0
margin/top = 488.0
margin/right = 619.0
margin/bottom = 521.0
text = "Set the ball"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="shoot" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 4 )
margin/left = 419.0
margin/top = 488.0
margin/right = 640.0
margin/bottom = 521.0
text = "Shoot the ball"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="win_order" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 4 )
margin/left = 428.0
margin/top = 17.0
margin/right = 573.0
margin/bottom = 50.0
text = "<fdhadgh"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Restart" type="Button" parent="win_order"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 4 )
margin/left = 401.0
margin/top = 481.0
margin/right = 540.0
margin/bottom = 520.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "RESTART"
flat = false

[node name="Menu" type="Button" parent="win_order"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -403.0
margin/top = 479.0
margin/right = -124.0
margin/bottom = 518.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit to Main Menu"
flat = false

[connection signal="button_up" from="win_order/Restart" to="." method="_on_Restart_button_up"]

[connection signal="pressed" from="win_order/Menu" to="." method="_on_Menu_pressed"]


